feature: add method Get messages and swagger method Get, Post messages
